--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <title>Expanding Cards</title>
   </head>
-  <body>
+  <body id="container">
     <div class="container">
       <div
         class="panel active"
